# otus-ml

./: CMakeLists.txt
.github/workflows/: release.yml
inc/: classifier.h  fashion_classifier.h  helpers.h  logreg_classifier.h
src/: fashio_mnist.cpp  fashion_classifier.cpp  helpers.cpp  logreg_classifier.cpp
tests/: test_logreg_classifier.cpp
